src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void OdometrySettings_setAngleThreshold_0(void* self, float val);
extern "C" __declspec(dllexport) float OdometrySettings_getAngleThreshold_0(void* self);
extern "C" __declspec(dllexport) void OdometrySettings_setMaxTranslation_0(void* self, float val);
extern "C" __declspec(dllexport) float OdometrySettings_getMaxTranslation_0(void* self);
extern "C" __declspec(dllexport) void OdometrySettings_setMaxRotation_0(void* self, float val);
extern "C" __declspec(dllexport) float OdometrySettings_getMaxRotation_0(void* self);
extern "C" __declspec(dllexport) void OdometrySettings_setMinGradientMagnitude_0(void* self, float val);
extern "C" __declspec(dllexport) float OdometrySettings_getMinGradientMagnitude_0(void* self);
extern "C" __declspec(dllexport) void OdometrySettings_setMinGradientMagnitudes_0(void* self, void* val);
extern "C" __declspec(dllexport) void OdometrySettings_getMinGradientMagnitudes_0(void* self, void* val);
extern "C" __declspec(dllexport) void RgbdNormals_Delete(void* self);
extern "C" __declspec(dllexport) void* RgbdNormals_create_0(int rows, int cols, int depth, void* K, int window_size, float diff_threshold, void* method);
extern "C" __declspec(dllexport) void RgbdNormals_apply_0(void* self, void* points, void* normals);
extern "C" __declspec(dllexport) void RgbdNormals_cache_0(void* self);
extern "C" __declspec(dllexport) int RgbdNormals_getRows_0(void* self);
extern "C" __declspec(dllexport) void RgbdNormals_setRows_0(void* self, int val);
extern "C" __declspec(dllexport) int RgbdNormals_getCols_0(void* self);
extern "C" __declspec(dllexport) void RgbdNormals_setCols_0(void* self, int val);
extern "C" __declspec(dllexport) int RgbdNormals_getWindowSize_0(void* self);
extern "C" __declspec(dllexport) void RgbdNormals_setWindowSize_0(void* self, int val);
extern "C" __declspec(dllexport) int RgbdNormals_getDepth_0(void* self);
extern "C" __declspec(dllexport) void RgbdNormals_getK_0(void* self, void* val);
extern "C" __declspec(dllexport) void RgbdNormals_setK_0(void* self, void* val);
extern "C" __declspec(dllexport) void* RgbdNormals_getMethod_0(void* self);
extern "C" __declspec(dllexport) void TriangleRasterizeSettings_Delete(void* self);
extern "C" __declspec(dllexport) void* TriangleRasterizeSettings_setShadingType_0(void* self, int st);
extern "C" __declspec(dllexport) void* TriangleRasterizeSettings_setCullingMode_0(void* self, int cm);
extern "C" __declspec(dllexport) void* TriangleRasterizeSettings_setGlCompatibleMode_0(void* self, int gm);
extern "C" __declspec(dllexport) void Volume_Delete(void* self);
extern "C" __declspec(dllexport) void* Volume_New_0(int vtype, void* settings);
extern "C" __declspec(dllexport) void Volume_integrate_0(void* self, void* frame, void* pose);
extern "C" __declspec(dllexport) void Volume_integrate_1(void* self, void* depth, void* pose);
extern "C" __declspec(dllexport) void Volume_integrate_2(void* self, void* depth, void* image, void* pose);
extern "C" __declspec(dllexport) void Volume_raycast_0(void* self, void* cameraPose, void* points, void* normals);
extern "C" __declspec(dllexport) void Volume_raycast_1(void* self, void* cameraPose, void* points, void* normals, void* colors);
extern "C" __declspec(dllexport) void Volume_raycast_2(void* self, void* cameraPose, int height, int width, void* K, void* points, void* normals);
extern "C" __declspec(dllexport) void Volume_raycast_3(void* self, void* cameraPose, int height, int width, void* K, void* points, void* normals, void* colors);
extern "C" __declspec(dllexport) void Volume_fetchNormals_0(void* self, void* points, void* normals);
extern "C" __declspec(dllexport) void Volume_fetchPointsNormals_0(void* self, void* points, void* normals);
extern "C" __declspec(dllexport) void Volume_fetchPointsNormalsColors_0(void* self, void* points, void* normals, void* colors);
extern "C" __declspec(dllexport) void Volume_reset_0(void* self);
extern "C" __declspec(dllexport) int Volume_getVisibleBlocks_0(void* self);
extern "C" __declspec(dllexport) size_t Volume_getTotalVolumeUnits_0(void* self);
extern "C" __declspec(dllexport) void Volume_getBoundingBox_0(void* self, void* bb, int precision);
extern "C" __declspec(dllexport) void Volume_setEnableGrowth_0(void* self, bool v);
extern "C" __declspec(dllexport) bool Volume_getEnableGrowth_0(void* self);
extern "C" __declspec(dllexport) void VolumeSettings_Delete(void* self);
extern "C" __declspec(dllexport) void* VolumeSettings_New_0(int volumeType);
extern "C" __declspec(dllexport) void VolumeSettings_setIntegrateWidth_0(void* self, int val);
extern "C" __declspec(dllexport) int VolumeSettings_getIntegrateWidth_0(void* self);
extern "C" __declspec(dllexport) void VolumeSettings_setIntegrateHeight_0(void* self, int val);
extern "C" __declspec(dllexport) int VolumeSettings_getIntegrateHeight_0(void* self);
extern "C" __declspec(dllexport) void VolumeSettings_setRaycastWidth_0(void* self, int val);
extern "C" __declspec(dllexport) int VolumeSettings_getRaycastWidth_0(void* self);
extern "C" __declspec(dllexport) void VolumeSettings_setRaycastHeight_0(void* self, int val);
extern "C" __declspec(dllexport) int VolumeSettings_getRaycastHeight_0(void* self);
extern "C" __declspec(dllexport) void VolumeSettings_setDepthFactor_0(void* self, float val);
extern "C" __declspec(dllexport) float VolumeSettings_getDepthFactor_0(void* self);
extern "C" __declspec(dllexport) void VolumeSettings_setVoxelSize_0(void* self, float val);
extern "C" __declspec(dllexport) float VolumeSettings_getVoxelSize_0(void* self);
extern "C" __declspec(dllexport) void VolumeSettings_setTsdfTruncateDistance_0(void* self, float val);
extern "C" __declspec(dllexport) float VolumeSettings_getTsdfTruncateDistance_0(void* self);