src/OpenCV5Sharp/Generated/NativeMethods.Ptcloud.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometrySettings_setAngleThreshold_0(OdometrySettingsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float OdometrySettings_getAngleThreshold_0(OdometrySettingsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometrySettings_setMaxTranslation_0(OdometrySettingsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float OdometrySettings_getMaxTranslation_0(OdometrySettingsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometrySettings_setMaxRotation_0(OdometrySettingsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float OdometrySettings_getMaxRotation_0(OdometrySettingsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometrySettings_setMinGradientMagnitude_0(OdometrySettingsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float OdometrySettings_getMinGradientMagnitude_0(OdometrySettingsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometrySettings_setMinGradientMagnitudes_0(OdometrySettingsHandle self, MatHandle val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometrySettings_getMinGradientMagnitudes_0(OdometrySettingsHandle self, MatHandle val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void RgbdNormals_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr RgbdNormals_create_0(int rows, int cols, int depth, IntPtr K, int window_size, float diff_threshold, int method);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void RgbdNormals_apply_0(RgbdNormalsHandle self, MatHandle points, MatHandle normals);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void RgbdNormals_cache_0(RgbdNormalsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int RgbdNormals_getRows_0(RgbdNormalsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void RgbdNormals_setRows_0(RgbdNormalsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int RgbdNormals_getCols_0(RgbdNormalsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void RgbdNormals_setCols_0(RgbdNormalsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int RgbdNormals_getWindowSize_0(RgbdNormalsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void RgbdNormals_setWindowSize_0(RgbdNormalsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int RgbdNormals_getDepth_0(RgbdNormalsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void RgbdNormals_getK_0(RgbdNormalsHandle self, MatHandle val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void RgbdNormals_setK_0(RgbdNormalsHandle self, MatHandle val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int RgbdNormals_getMethod_0(RgbdNormalsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TriangleRasterizeSettings_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr TriangleRasterizeSettings_setShadingType_0(TriangleRasterizeSettingsHandle self, int st);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr TriangleRasterizeSettings_setCullingMode_0(TriangleRasterizeSettingsHandle self, int cm);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr TriangleRasterizeSettings_setGlCompatibleMode_0(TriangleRasterizeSettingsHandle self, int gm);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Volume_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Volume_New_0(int vtype, IntPtr settings);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Volume_integrate_0(VolumeHandle self, OdometryFrameHandle frame, MatHandle pose);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Volume_integrate_1(VolumeHandle self, MatHandle depth, MatHandle pose);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Volume_integrate_2(VolumeHandle self, MatHandle depth, MatHandle image, MatHandle pose);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Volume_raycast_0(VolumeHandle self, MatHandle cameraPose, MatHandle points, MatHandle normals);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Volume_raycast_1(VolumeHandle self, MatHandle cameraPose, MatHandle points, MatHandle normals, MatHandle colors);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Volume_raycast_2(VolumeHandle self, MatHandle cameraPose, int height, int width, MatHandle K, MatHandle points, MatHandle normals);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Volume_raycast_3(VolumeHandle self, MatHandle cameraPose, int height, int width, MatHandle K, MatHandle points, MatHandle normals, MatHandle colors);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Volume_fetchNormals_0(VolumeHandle self, MatHandle points, MatHandle normals);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Volume_fetchPointsNormals_0(VolumeHandle self, MatHandle points, MatHandle normals);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Volume_fetchPointsNormalsColors_0(VolumeHandle self, MatHandle points, MatHandle normals, MatHandle colors);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Volume_reset_0(VolumeHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Volume_getVisibleBlocks_0(VolumeHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long Volume_getTotalVolumeUnits_0(VolumeHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Volume_getBoundingBox_0(VolumeHandle self, MatHandle bb, int precision);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Volume_setEnableGrowth_0(VolumeHandle self, [MarshalAs(UnmanagedType.U1)] bool v);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool Volume_getEnableGrowth_0(VolumeHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VolumeSettings_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr VolumeSettings_New_0(int volumeType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VolumeSettings_setIntegrateWidth_0(VolumeSettingsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int VolumeSettings_getIntegrateWidth_0(VolumeSettingsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VolumeSettings_setIntegrateHeight_0(VolumeSettingsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int VolumeSettings_getIntegrateHeight_0(VolumeSettingsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VolumeSettings_setRaycastWidth_0(VolumeSettingsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int VolumeSettings_getRaycastWidth_0(VolumeSettingsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VolumeSettings_setRaycastHeight_0(VolumeSettingsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int VolumeSettings_getRaycastHeight_0(VolumeSettingsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VolumeSettings_setDepthFactor_0(VolumeSettingsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float VolumeSettings_getDepthFactor_0(VolumeSettingsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VolumeSettings_setVoxelSize_0(VolumeSettingsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float VolumeSettings_getVoxelSize_0(VolumeSettingsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VolumeSettings_setTsdfTruncateDistance_0(VolumeSettingsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float VolumeSettings_getTsdfTruncateDistance_0(VolumeSettingsHandle self);
